force-app/main/default/objects/P148Letter__c/P148Letter__c.object-meta.xml
<CustomObject>
    <label>Paragraph 148 Letter</label>
    <nameField>
        <displayFormat>P148L-{000000}</displayFormat>
        <label>P148Letter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paragraph 148 Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>