force-app/main/default/objects/P148Letter__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <formula>Venue__r.Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingCity</label>
    <type>Text</type>
</CustomField>