force-app/main/default/objects/P148Letter__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <formula>Venue__r.Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingPostalCode</label>
    <type>Text</type>
</CustomField>