force-app/main/default/objects/P148Letter__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <formula>Venue__r.Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingStreet</label>
    <type>Text</type>
</CustomField>