force-app/main/default/objects/P148Letter__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <formula>Venue__r.Account__r.CustomerID__c</formula>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>