force-app/main/default/objects/P148Letter__c/fields/Download__c.field-meta.xml
<CustomField>
    <fullName>Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Download</label>
    <type>Checkbox</type>
</CustomField>