force-app/main/default/objects/P148Letter__c/fields/F_City__c.field-meta.xml
<CustomField>
    <fullName>F_City__c</fullName>
    <label>Finanzamt City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>