force-app/main/default/objects/P148Letter__c/fields/F_Email__c.field-meta.xml
<CustomField>
    <fullName>F_Email__c</fullName>
    <label>Finanzamt Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>