force-app/main/default/objects/P148Letter__c/fields/F_Name__c.field-meta.xml
<CustomField>
    <fullName>F_Name__c</fullName>
    <label>Finanzamt Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>