force-app/main/default/objects/P148Letter__c/fields/F_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>F_PostalCode__c</fullName>
    <label>Finanzamt Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>