force-app/main/default/objects/P148Letter__c/fields/F_Street__c.field-meta.xml
<CustomField>
    <fullName>F_Street__c</fullName>
    <label>Finanzamt Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>