force-app/main/default/objects/P148Letter__c/fields/F_URL__c.field-meta.xml
<CustomField>
    <fullName>F_URL__c</fullName>
    <label>Finanzamt URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>