force-app/main/default/objects/P148Letter__c/fields/Finanzamt__c.field-meta.xml
<CustomField>
    <fullName>Finanzamt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finanzamt</label>
    <referenceTo>Finanzamt__c</referenceTo>
    <relationshipLabel>Paragraph 148 Letters</relationshipLabel>
    <relationshipName>Paragraph_148_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>