force-app/main/default/objects/P148Letter__c/fields/FiscalizedSince__c.field-meta.xml
<CustomField>
    <fullName>FiscalizedSince__c</fullName>
    <label>Fiscalized Since</label>
    <type>DateTime</type>
</CustomField>