force-app/main/default/objects/P148Letter__c/fields/LegalCompanyName__c.field-meta.xml
<CustomField>
    <fullName>LegalCompanyName__c</fullName>
    <label>Legal Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>