force-app/main/default/objects/P148Letter__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue</label>
    <referenceTo>MyObVenue__c</referenceTo>
    <relationshipLabel>Paragraph 148 Letters</relationshipLabel>
    <relationshipName>Paragraph_148_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>