force-app/main/default/objects/P148Letter__c/fields/VenueCity__c.field-meta.xml
<CustomField>
    <fullName>VenueCity__c</fullName>
    <label>Venue City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>