force-app/main/default/objects/P148Letter__c/fields/VenuePostalCode__c.field-meta.xml
<CustomField>
    <fullName>VenuePostalCode__c</fullName>
    <label>Venue Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>