force-app/main/default/objects/P148Letter__c/fields/VenueStreet__c.field-meta.xml
<CustomField>
    <fullName>VenueStreet__c</fullName>
    <label>Venue Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>